[package]
name = "pico-usb-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.4.0", features = ["rp2040", "time-driver", "critical-section-impl", "boot2-w25q080"] }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-usb = "0.4.0"
panic-reset = "0.1"
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1.0"
usbd-hid = "0.8.2"

[profile.release]
opt-level = "s"
lto = true
incremental = false
codegen-units = 1
