[package]
name = "pico-usb-keyboard-lib"
version = "0.1.0"
edition = "2021"
default-run = "pico-usb-keyboard"

[dependencies]
cortex-m-rt = { version = "0.7", optional = true }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "task-arena-size-32768"], optional = true }
embassy-futures = { version = "0.1.1", optional = true }
embassy-rp = { version = "0.4.0", features = ["rp2040", "time-driver", "critical-section-impl", "boot2-w25q080"], optional = true }
embassy-sync = { version = "0.6.2", optional = true }
embassy-time = { version = "0.4.0", optional = true }
embassy-usb = { version = "0.4.0", optional = true }
panic-reset = { version = "0.1", optional = true }
portable-atomic = { version = "1.11.0", features = ["critical-section"], optional = true }
static_cell = { version = "2.1.0", optional = true }
usbd-hid = { version = "0.8.2" }

[lib]
test = true
doc = false

[profile.release]
opt-level = "s"
lto = true
incremental = false
codegen-units = 1

[features]
default = ["build-binary"]
build-binary = ["cortex-m-rt", "embassy-executor", "embassy-futures", "embassy-rp", "embassy-sync", "embassy-time", "embassy-usb", "panic-reset", "portable-atomic", "static_cell"]

[[bin]]
name = "pico-usb-keyboard"
path = "src/main.rs"
required-features = ["build-binary"]
test = false
doc = true
